# destino

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  app.py  config.py  convert_to_onnx.py  destino.yaml  diagnose_model.py  gcloud.py  history.py  hparams.py  install.py  main.py  mcts.py  models.py  models_onnx.py  muzero.py  play.py  pyproject.toml  replay_buffer.py  shared_storage.py  test_mcts.py  trainer.py  utils.py  zarena-0.2.2-cp36-abi3-manylinux_2_24_x86_64.whl
.github/workflows/: python.yml
games/: abstract_game.py  blackjack.py  checkers.py  chess.py  poker.py  tictactoe.py
games/config/: blackjack.yaml  checkers.yaml  chess.yaml  poker.yaml  tictactoe.yaml  tictactoe_static.yaml
masters/tictactoe/: model.checkpoint
mcts/: Cargo.toml  pyproject.toml
mcts/src/: config.rs  lib.rs  mcts.rs
notebooks/: destino.ipynb  game_wheel.ipynb  mcts.ipynb  mcts_wheel.ipynb  muzero.ipynb
tests/: test_mcts.py  test_mcts_benchmark.py
