[package]
name = "mcts"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "mcts"
# "cdylib" is necessary to produce a shared library for Python to import from.
crate-type = ["cdylib"]

[dependencies]
rand = "0.8.4"
rand_distr = "0.4.2"

[dependencies.pyo3]
version = "0.15.1"
features = ["extension-module"]
